--- a/index.html
+++ b/index.html
@@ -10,6 +10,70 @@
 </head>
 <body>
 
+	<div class="container">
+		<header class="row">
+			<div class="col-xs -8 col-sm-4 col-md-6 centered">
+				<img src="img/petstore_logo.png" alt="pet store logo" class="pull-left logo">
+				<h1 class="pull-left text-center">Pet Store</h1>
+			</div>
+			<nav class="col-xs-12 col-sm-7 col-md-6">
+				<ul class="nav nav-pills pull-right">
+
+				<li role="presentation" class="active"><a href="index.html" >Home</a>
+				
+				</li>
+				<li role="presentation"><a href="#">Products</a>
+				</li>
+				<li role="presentation"><a href="contact.html">Contact Us</a>
+				</li>
+			</ul>
+			</nav>
+		</header>
+		<div class=""></div>
+	</div>
+	<div class="jumbotron">
+		<div class="container text-center text-uppercase">
+			<h2>The products they love. Prices that you like.</h2>
+		</div>
+	</div>
+	
+	<section class="container">
+		<div class="row">
+			<div class="col-sm-7 text-justify featured">
+				<h2 class="text-uppercase">Featured</h2>
+				<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus aspernatur nisi est molestiae reprehenderit? Inventore sequi maxime dolorum? Optio, vel?</p>
+				<div class="row">
+					<div class="col-sm-4 product row">
+						<div class="col-sm-12 col-xs-6 img_box"><img src="img/product1.jpg" alt="dog bowl" class="img-responsive"></div>
+						<div class="col-sm-12 col-xs-6">
+							<h4>Dog Bowl</h4>
+							<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium, dolorum.</p>
+							<button class="btn-xs center-block">Purchase Now</button>
+						</div>
+					</div>
+					<div class="col-sm-4 product row">
+						<div class="col-sm-12 col-xs-6 img_box"><img src="img/product1.jpg" alt="dog bowl" class="img-responsive"></div>
+						<div class="col-sm-12 col-xs-6">
+							<h4>Dog Bowl</h4>
+							<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur, repudiandae?</p>
+							<button class="btn-xs center-block">Purchase Now</button>
+						</div>
+					</div>
+					<div class="col-sm-4 product row">
+						<div class="col-sm-12 col-xs-6 img_box"><img src="img/product1.jpg" alt="dog bowl" class="img-responsive"></div>
+						<div class="col-sm-12 col-xs-6">
+							<h4>Dog Bowl</h4>
+							<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam, magnam.</p>
+							<button class="btn-xs center-block">Purchase Now</button>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
+	
+
+
 	<!-- scripts -->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 	<script src="js/bootstrap.min.js"></script>
