--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 				<h2 class="text-uppercase">Featured</h2>
 				<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus aspernatur nisi est molestiae reprehenderit? Inventore sequi maxime dolorum? Optio, vel?</p>
 				<div class="row">
-					<div class="col-sm-4 product row">
+					<div class="col-sm-4 product ">
 						<div class="col-sm-12 col-xs-6 img_box"><img src="img/product1.jpg" alt="dog bowl" class="img-responsive"></div>
 						<div class="col-sm-12 col-xs-6">
 							<h4>Dog Bowl</h4>
@@ -51,27 +51,79 @@
 							<button class="btn-xs center-block">Purchase Now</button>
 						</div>
 					</div>
-					<div class="col-sm-4 product row">
-						<div class="col-sm-12 col-xs-6 img_box"><img src="img/product1.jpg" alt="dog bowl" class="img-responsive"></div>
+					<div class="col-sm-4 product ">
+						<div class="col-sm-12 col-xs-6 img_box"><img src="img/product2.jpg" alt="dog bowl" class="img-responsive"></div>
 						<div class="col-sm-12 col-xs-6">
-							<h4>Dog Bowl</h4>
+							<h4>Cat Toy</h4>
 							<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur, repudiandae?</p>
 							<button class="btn-xs center-block">Purchase Now</button>
 						</div>
 					</div>
-					<div class="col-sm-4 product row">
-						<div class="col-sm-12 col-xs-6 img_box"><img src="img/product1.jpg" alt="dog bowl" class="img-responsive"></div>
+					<div class="col-sm-4 product ">
+						<div class="col-sm-12 col-xs-6 img_box"><img src="img/product3.jpg" alt="dog bowl" class="img-responsive"></div>
 						<div class="col-sm-12 col-xs-6">
-							<h4>Dog Bowl</h4>
+							<h4>Parrot Toy</h4>
 							<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam, magnam.</p>
 							<button class="btn-xs center-block">Purchase Now</button>
 						</div>
 					</div>
 				</div>
 			</div>
+
+			<aside class="col-sm-3 col-sm-offset-2">
+				<h2 class="text-center text-uppercase">Services</h2>
+				<ul class="nav nav-pills nav-stacked text-center">
+					<li role="presentation">
+						<a href="" class="text-uppercase">Adopt a Cat</a>
+						<p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>	
+					</li>
+					<li role="presentation">
+						<a href="" class="text-uppercase">Adopt a Dog</a>
+						<p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+					</li>
+					<li role="presentation">
+						<a href="" class="text-uppercase">Adopt a Fish</a>
+						<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
+					</li>
+				</ul>
+			</aside>			
 		</div>
 	</section>
 	
+	<footer class="container-fluid">
+		<div class="row centered">
+			<div class="col-xs-6 col-sm-1 col-sm-offset-1"><img src="img/petstore_logo.png" alt="Pet Store logo" class="logo"></div>
+			<div class="col-xs-6 col-sm-3 col-sm-offset-1 contact_info">
+				<address>
+					<a href="">
+						Pet Store
+						<br>
+							Fresno, Ca<br>
+					</a><a href="">info@petstore.com</a>
+				</address>
+			</div>
+			<div class="col-sm-2 social">
+				<a href="#">
+					<i class="fab fa-facebook"></i>
+					<!-- <span class="hidden-xs-br hidden-xs">Facebook</span> -->
+				</a>
+				<a href="#">
+					<i class="fab fa-twitter"></i>
+					<!-- <span class="hidden-xs-br hidden-xs">Twitter</span> -->
+				</a>
+				<a href="#">
+					<i class="fab fa-linkedin"></i>
+					<!-- <span class="hidden-xs-br hidden-xs">Linkedin</span> -->
+				</a>
+			</div>
+		</div>
+
+		<div class="row">
+			<div class="col-sm-12 fine_print text-center">
+				<p>&copy; Pet Store, Inc. All rights reserved.</p>
+			</div>
+		</div>
+	</footer>
 
 
 	<!-- scripts -->
